test/regress/coverage-annotate-valexpr-err.test
; Coverage test for annotate.cc
; Valuation expression lacks closing parentheses

2024/01/15 Test
    Assets:Stocks    10 AAPL ((market(amount, date, exchange))
    Assets:Cash     $-1500.00

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Stocks    10 AAPL ((market(amount, date, exchange))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Commodity valuation expression lacks closing parentheses
end test
